--- a/SmartTV/package.json
+++ b/SmartTV/package.json
@@ -13,9 +13,17 @@
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.0",
     "debug": "^2.2.0",
+    "drivelist": "^6.4.3",
+    "eventemitter2": "^5.0.1",
     "express": "^4.14.0",
+    "express-session": "^1.15.6",
+    "express-socket.io-session": "^1.3.5",
+    "memorystore": "^1.6.0",
     "morgan": "^1.7.0",
+    "mz": "^2.7.0",
     "pug": "^2.0.0-beta6",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "socket.io": "^2.2.0",
+    "telnet-client": "^0.16.2"
   }
 }
