--- a/SmartTV/package.json
+++ b/SmartTV/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.7.0",
     "mz": "^2.7.0",
     "pug": "^2.0.0-beta6",
+    "robotjs": "^0.5.1",
     "serve-favicon": "^2.3.0",
     "socket.io": "^2.2.0",
     "telnet-client": "^0.16.2"
