Got browser remote control to work

--- a/SmartTV/config/config_default.json
+++ b/SmartTV/config/config_default.json
@@ -2,7 +2,12 @@
   "datasources": {
     "netflix": {
       "password": "",
-      "email":  ""
+      "email": ""
     }
+  },
+  "paths": {
+    "vlc_path": "",
+    "firefox_path": "",
+    "videos_root_path": ""
   }
 }
