--- a/SmartTV/package.json
+++ b/SmartTV/package.json
@@ -18,6 +18,7 @@
     "express": "^4.14.0",
     "express-session": "^1.15.6",
     "express-socket.io-session": "^1.3.5",
+    "json-socket": "^0.3.0",
     "memorystore": "^1.6.0",
     "morgan": "^1.7.0",
     "mz": "^2.7.0",
